--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Denia Hope | Portfolio</title>
+  <title>Jerotich Korir | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Hello, I'm Denia Hope</h1>
+    <h1>Hello, I'm Jerotich Korir</h1>
     <p>Welcome to my personal website</p>
   </header>
 
   <section class="about">
     <h2>About Me</h2>
-    <p>I am passionate about [your passion here, e.g., design, coding, writing]. I enjoy creating and learning new things every day.</p>
+    <p>I am passionate about designing, coding, writing. I enjoy creating and learning new things every day.</p>
   </section>
 
   <section class="projects">
     <h2>Projects</h2>
     <ul>
-      <li><strong>Project 1:</strong> Description of your first project</li>
-      <li><strong>Project 2:</strong> Description of your second project</li>
+      <li><strong>Project 1:</strong> Designing my first website</li>
+      <li><strong>Project 2:</strong> Writing clean codes </li>
     </ul>
   </section>
 
