--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
   <section class="projects">
     <h2>Projects</h2>
     <ul>
-      <li><strong>Project 1:</strong> Designing my first website</li>
-      <li><strong>Project 2:</strong> Writing clean codes </li>
+      <li><strong>My first design:</strong> Designing my first website</li>
+      <li><strong>My first code writing:</strong> Writing clean codes </li>
     </ul>
   </section>
 
   <section class="contact">
     <h2>Contact</h2>
-    <p>Email me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>Email me at: <a href="mailto: hopejerotich952@gmail.com"></a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Denia Hope</p>
+    <p>&copy; 2025 jerotich korir</p>
   </footer>
 
   <script src="script.js"></script>
