--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <section class="contact">
     <h2>Contact</h2>
-    <p>Email me at: <a href="mailto: hopejerotich952@gmail.com"></a></p>
+    <p>Email me at: <a href="mailto: hopejerotich952@gmail.com">hopejerotich952@gmail.com</a></p>
   </section>
 
   <footer>
